force-app/main/default/objects/Webhook__c/Webhook__c.object-meta.xml
<CustomObject>
    <description>Used to post data to external systems</description>
    <label>Webhook</label>
    <nameField>
        <displayFormat>WH-{0000000000}</displayFormat>
        <label>Webhook Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Webhooks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>