force-app/main/default/objects/Webhook__c/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <description>What is the action related to the webhook notification?</description>
    <inlineHelpText>What is the action related to the webhook notification?</inlineHelpText>
    <label>Action</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Webhook_Action</valueSetName>
    </valueSet>
</CustomField>