force-app/main/default/objects/Webhook__c/fields/Attempts__c.field-meta.xml
<CustomField>
    <fullName>Attempts__c</fullName>
    <description>The number of times salesforce tried to send the webhook.</description>
    <inlineHelpText>The number of times salesforce tried to send the webhook.</inlineHelpText>
    <label>Attempts</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>