force-app/main/default/objects/Webhook__c/fields/Execution_Order__c.field-meta.xml
<CustomField>
    <fullName>Execution_Order__c</fullName>
    <description>Should the webhook execute synchronously or asynchronously?</description>
    <inlineHelpText>Choose asynchronous to generate a platform and send the webhook asynchronously. 
Choose synchronous to send the webhook immediately.</inlineHelpText>
    <label>Execution Order</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Web_Hook_Execution</valueSetName>
    </valueSet>
</CustomField>