force-app/main/default/objects/Webhook__c/fields/Max_Attempts__c.field-meta.xml
<CustomField>
    <fullName>Max_Attempts__c</fullName>
    <defaultValue>3</defaultValue>
    <description>The maximum number of times salesforce will try to send the webhook.</description>
    <inlineHelpText>The maximum number of times salesforce will try to send the webhook.</inlineHelpText>
    <label>Max Attempts</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>