force-app/main/default/objects/Webhook__c/fields/Object_Payload_Id__c.field-meta.xml
<CustomField>
    <fullName>Object_Payload_Id__c</fullName>
    <description>The id of the object to retrieve and post.</description>
    <label>Object Payload Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>