force-app/main/default/objects/Webhook__c/fields/Payload__c.field-meta.xml
<CustomField>
    <fullName>Payload__c</fullName>
    <description>The JSON Payload of the Webhook.</description>
    <inlineHelpText>The JSON Payload of the Webhook.</inlineHelpText>
    <label>Payload</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>