force-app/main/default/objects/Webhook__c/fields/StatusCode__c.field-meta.xml
<CustomField>
    <fullName>StatusCode__c</fullName>
    <description>The Status code of the webhook request.</description>
    <inlineHelpText>The Status code of the webhook request.</inlineHelpText>
    <label>StatusCode</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>