force-app/main/default/objects/Webhook__c/fields/URL__c.field-meta.xml
<CustomField>
    <fullName>URL__c</fullName>
    <description>The destination URL of the webhook.</description>
    <inlineHelpText>The destination URL of the webhook.</inlineHelpText>
    <label>URL</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>