force-app/main/default/objects/Webhook__c/validationRules/Only_allow_one_payload.validationRule-meta.xml
<ValidationRule>
    <fullName>Only_allow_one_payload</fullName>
    <active>true</active>
    <description>Payload__c  and Object_Payload_Id__c  are mutually exclusive.</description>
    <errorConditionFormula>AND(NOT( ISNULL(Payload__c)) ,NOT(ISNULL(Payload__c)))</errorConditionFormula>
    <errorMessage>Payload__c  and Object_Payload_Id__c  are mutually exclusive.</errorMessage>
</ValidationRule>